--- a/PageStyle.css
+++ b/PageStyle.css
@@ -39,7 +39,7 @@ p.info {
     color: rgb(179, 179, 179);
     vertical-align: top;
     font-size: xx-large;
-    line-height: 200%;
+    /* line-height: 200%; */
 }
 
 header {
