--- a/PageStyle.css
+++ b/PageStyle.css
@@ -8,6 +8,11 @@ div.gallery {
     height: 200px;
 }
 
+img.info {
+    width: 500px;
+    height: 500px;
+}
+
 img.gallery {
     width: 100%;
     height: 100%;
@@ -39,7 +44,7 @@ p.info {
     color: rgb(179, 179, 179);
     vertical-align: top;
     font-size: xx-large;
-    /* line-height: 200%; */
+    line-height: 300%;
 }
 
 header {
