--- a/PageStyle.css
+++ b/PageStyle.css
@@ -87,9 +87,20 @@ footer {
     margin-right: 35%;
 }
 
-p.BigSize {
+.BigSize {
     font-size: 1cm;
     text-align: justify;
     color: rgb(179, 179, 179);
     margin-left: 2cm;
+}
+
+input[type=radio] {
+    border: 0px;
+    width: 20px;
+    height: 20px;
+}
+
+input[type=text] {
+    width: 1100px;
+    height: 30px;
 }
