--- a/PageStyle.css
+++ b/PageStyle.css
@@ -104,3 +104,73 @@ input[type=text] {
     width: 1100px;
     height: 30px;
 }
+
+input[type=submit] {
+    width: 5em;
+    height: 2.2em;
+}
+
+a {
+    text-decoration: none;
+}
+
+nav ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+}
+
+nav ul li {
+    --c: rgb(179, 179, 179);
+    color: var(--c);
+    width: 115px;
+    height: 3.3em;
+    border: 0.3em solid var(--c);
+    text-align: center;
+    line-height: 3em;
+    font-weight: bold;
+    font-family: sans-serif;
+    position: relative;
+    overflow: hidden;
+    z-index: 1;
+    transition: 0.5s;
+    margin: 0.2em;
+    font-size: 20px;
+}
+
+nav ul li:hover {
+    color: black;
+}
+
+nav ul li span {
+    position: absolute;
+    width: 25%;
+    height: 100%;
+    background-color: var(--c);
+    transform: translateY(150%);
+    border-radius: 50%;
+    left: calc((var(--n) - 1) * 25%);
+    transition: 0.5s;
+    transition-delay: calc((var(--n) - 1) * 0.1s);
+    z-index: -1;
+}
+
+nav ul li:hover span {
+    transform: translateY(0) scale(2);
+}
+
+nav ul li span:nth-child(1) {
+    --n: 1;
+}
+
+nav ul li span:nth-child(2) {
+    --n: 2;
+}
+
+nav ul li span:nth-child(3) {
+    --n: 3;
+}
+
+nav ul li span:nth-child(4) {
+    --n: 4;
+}
